// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default-escaped.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// export asyn\\u{63} from "async";
export n\\u{63} from "async";
=====================================output=====================================
// export asyn\\u{63} from "async";
export nc from "async";

================================================================================
`;

exports[`default-escaped.js format[acorn] 1`] = `
"Unexpected token (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: Unexpected token (2:7)"
`;

exports[`default-escaped.js format[espree] 1`] = `
"Unexpected token n\\u{63} (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: Unexpected token n\\u{63}"
`;

exports[`default-escaped.js format[flow] 1`] = `
"Unexpected identifier, expected a declaration, statement or export specifiers (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: Unexpected identifier, expected a declaration, statement or export specifiers (2:7)"
`;

exports[`default-escaped.js format[hermes] 1`] = `
"expected declaration in export (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^
Cause: expected declaration in export (2:7)
export n\\u{63} from "async";
       ^~~~~~~"
`;

exports[`default-escaped.js format[meriyah] 1`] = `
"Unexpected token: 'identifier' (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^^^^^^^
Cause: [2:7-2:14]: Unexpected token: 'identifier'"
`;

exports[`default-escaped.js format[oxc] 1`] = `
"Unexpected token (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^^^^^^^"
`;

exports[`default-escaped.js format[yuku] 1`] = `
"Expected declaration after 'export', but found 'n\\u{63}' (2:8)
  1 | // export asyn\\u{63} from "async";
> 2 | export n\\u{63} from "async";
    |        ^^^^^^^"
`;
